updated conversation api, social login apis, swagger updated
