# controllers/offer.controller.js
@@ -158,3 +158,28 @@ export const getOffersBySellerId = async (req, res, next) => {
     next(err);
   }
 };
+
+// get offers by pruduct and service id 
+export const getOffersByProductAndService = async (req, res, next) => {
+  try {
+    const { productId, serviceId } = req.query;
+
+    if (!productId || !serviceId) {
+      return next(createError(400, 'Both productId and serviceId are required'));
+    }
+
+    
+    const product = await Product.findOne({ _id: productId, service: serviceId });
+
+    if (!product) {
+      return res.status(404).json({ success: false, message: 'Product not found under this service' });
+    }
+
+   
+    const offers = await Offer.find({ product: productId }).populate('product');
+
+    res.status(200).json({ success: true, data: offers });
+  } catch (err) {
+    next(err);
+  }
+};
